SLING-4674: clarify how the integration tests can be debugged (server- and client-side)
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk/launchpad/testing@1676917 13f79535-47bb-0310-9956-ffa450edef68